@@ -9,7 +9,8 @@ export(skaluj_egz_gimn_rasch)
 export(skaluj_matura)
 export(skaluj_matura_rasch)
 export(skaluj_spr)
-export(skroc_skale)
+export(skroc_skale_oceny)
+export(skroc_skale_oceny_w_ramach_skali)
 export(sprawdz_wyniki_skalowania)
 export(wylicz_normy_ekwikwantylowe)
 import(EWDdane)
